        * Added ecore-con unit test

2011-10-28  Jiyoun Park

        * Fix bug in Ecore_X using geometry value instead of
          recently requested geometry value

2011-10-28 Rafael Antognolli

        * Make the framebuffer engine input use ecore_input_evas instead
        of feeding evas input events directly.

2011-11-02 Nicolas Aguirre

	* Add support ecore_cocoa_evas engine.
	* Fix ecore_cocoa code to correctly handle cocoa window.

2011-11-02 Bluezery

	* Fix return error handling in ecore_file_download when
        ecore_con_url_get() fails.

2011-11-20 Vincent Torri

	* Ecore_Win32, Ecore_WinCE: fix Shift, Control and Alt keys
	detection
	* Ecore_Win32: fix "mouse-down inside and mouse-up outside" issue

2011-11-2  Carsten Haitzler (The Rasterman)

        * Fix bug ecore-evas for fb, buffer, sdl back-ends to ensure
        mouse is in on init (as events wont always give this) and focus
        is set on show if appropriate if no focus in/out events come
        from the back-end later
        * Fix setting override state to only hide if it should be
        visible at that point in x back end support

2011-11-24 Rafael Antognolli

        * Add ecore_fb_input_device_window_set().

2011-11-27 Vincent Torri

        * Fix and improve key management on Windows XP

2011-11-29 Vincent Torri

        * Discard left Ctrl when AltGr is pressed (Windows XP)
	* Fix the string value for the Delete key (Windows XP)
	* Fix the key release values for non keystroke keys (Windows XP)

2011-11-29 Mike McCormack

	* Allow quitting before entering the glib version of the main loop

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release
        
2011-12-02 Mike Blumenkrantz

        * Use mempools for allocations

2011-12-02 Term <term@twistedpath.org>

        * added ecore_x_randr_output_backlight_available()

2011-12-03 Vincent Torri

	* Fix the modifiers value (Windows XP)

2011-12-04 Mike Blumenkrantz

        * added ecore_timer_reset()