@@ -6,6 +6,8 @@ Changes since Ecore 1.1.0:
 Additions:
     * ecore
      - ecore_timer_reset()
+    * ecore_con
+     - ecore_con_socks api
     * ecore_x:
      - ecore_x_randr_output_backlight_available()
 
